--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.4",
+    "@rails/webpacker": "5.4.3",
     "turbolinks": "^5.2.0",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
+  },
+  "engines": {
+    "node": "16.14.0"
   },
   "version": "0.1.0",
   "devDependencies": {
